body alignment correction

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -10,7 +10,6 @@ Home Page Styling
   width: 100%;
   padding: 0 20px;
   margin-left: none;
-  /* border: 1px solid green; */
 }
 
 .appWrapper{
@@ -62,7 +61,9 @@ Home Page Styling
 .containerMain {
   width: 100%;
   max-width: 1200px;
-  margin: 0% 5%;
+  /* margin: 0 5% 5% 0; */
+  /* border: solid 1px red; */
+  
 }
 
 .containerFeatured,
@@ -129,7 +130,7 @@ Media Queries
   .containerMain {
     display: grid;
     justify-items: center;
-    margin: 1% 5% 0 5%;
+    margin: 1% 5% 5% 5%;
     grid-template-columns: 100%;
     grid-template-rows: repeat(4, auto);
     grid-template-areas:
